--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=Chance04@25
 spring.datasource.url=jdbc:mysql://localhost:3306/clnra2?createDatabaseIfNotExist=true
 
 
